feat: simplify sync with odoo